# RONCAD

./: Cargo.toml  README.md  plan.md  tool-manifesto.md  tool-spec.md
WebConcept/: RONCAD.html  styles.css
WebConcept/src/: app.jsx  icons.jsx  palette.jsx  panels.jsx  tweaks.jsx  viewport.jsx
crates/app/: Cargo.toml
crates/app/src/: app.rs  bootstrap.rs  dispatcher.rs  interaction_controller.rs  main.rs  settings.rs
crates/core/: Cargo.toml
crates/core/src/: command.rs  constraint.rs  error.rs  event.rs  ids.rs  lib.rs  selection.rs  transaction.rs  units.rs
crates/geometry/: Cargo.toml
crates/geometry/src/: arc.rs  body.rs  constraint.rs  constraint_inference.rs  feature.rs  fillet.rs  hover_target.rs  lib.rs  pick.rs  profile.rs  project.rs  sketch.rs  sketch_dimension.rs  sketch_entity.rs  solver.rs  topology.rs  workplane.rs
crates/project_io/: Cargo.toml
crates/project_io/src/: error.rs  lib.rs  schema.rs
crates/rendering/: Cargo.toml
crates/rendering/src/: body_mesh.rs  camera.rs  lib.rs
crates/tools/: Cargo.toml
crates/tools/src/: arc_tool.rs  circle_tool.rs  dimension_tool.rs  dynamic_input.rs  fillet_tool.rs  lib.rs  line_tool.rs  manager.rs  preselection.rs  rectangle_tool.rs  select_tool.rs  snapping.rs  tool.rs
crates/ui/: Cargo.toml
crates/ui/src/: command_palette.rs  constraints.rs  dimensions.rs  extrude_state.rs  hud_state.rs  inspector.rs  lib.rs  project_tree.rs  revolve_state.rs  right_sidebar.rs  shell.rs  status_bar.rs  theme.rs  tool_shelf.rs  toolbar.rs  viewport.rs
crates/ui/src/viewport/: body_overlay.rs  body_shader.wgsl  constraint_overlay.rs  dimension_overlay.rs  dynamic_overlay.rs  extrude_overlay.rs  grid_overlay.rs  hover_label.rs  hud_overlay.rs  mini_hud.rs  nav_gizmo.rs  profile_overlay.rs  selection_chip.rs  selection_marquee_overlay.rs  sketch_overlay.rs  snap_overlay.rs  tool_overlay.rs  wgpu_renderer.rs
