[workspace]
resolver = "2"
members = [
    "crates/app",
    "crates/core",
    "crates/geometry",
    "crates/rendering",
    "crates/ui",
    "crates/tools",
    "crates/project_io",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.82"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
roncad-core = { path = "crates/core" }
roncad-geometry = { path = "crates/geometry" }
roncad-rendering = { path = "crates/rendering" }
roncad-ui = { path = "crates/ui" }
roncad-tools = { path = "crates/tools" }
roncad-project-io = { path = "crates/project_io" }

egui = "0.34.1"
eframe = { version = "0.34.1", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui-phosphor = "0.12.0"
glam = { version = "0.32.1", features = ["serde"] }
slotmap = { version = "1.1", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1"
thiserror = "1"
anyhow = "1"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
