[package]
name = "roncad-project-io"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "roncad_project_io"
path = "src/lib.rs"

[dependencies]
roncad-core.workspace = true
roncad-geometry.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
