[package]
name = "roncad-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "roncad_ui"
path = "src/lib.rs"

[dependencies]
roncad-core.workspace = true
roncad-geometry.workspace = true
roncad-rendering.workspace = true
roncad-tools.workspace = true
egui.workspace = true
egui-phosphor.workspace = true
egui-wgpu.workspace = true
wgpu.workspace = true
bytemuck.workspace = true
glam.workspace = true
slotmap.workspace = true
